--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "prettier-plugin-organize-attributes",
-  "version": "1.0.0",
+  "name": "prettier-plugin-organize-attributes-xml",
+  "version": "0.0.1",
   "description": "Organize your HTML attributes autmatically with Prettier 🧼",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NiklasPor/prettier-plugin-organize-attributes"
+    "url": "https://github.com/toFrankie/prettier-plugin-organize-attributes-xml"
   },
   "author": {
-    "name": "Niklas Portmann",
-    "email": "niklaspor@gmail.com"
+    "name": "Frankie",
+    "email": "1426203851@qq.com"
   },
   "type": "commonjs",
   "keywords": [
@@ -18,6 +18,7 @@
     "organize",
     "attributes",
     "html",
+    "xml",
     "angular",
     "vue"
   ],
@@ -37,13 +38,15 @@
   "peerDependencies": {
     "prettier": "^3.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@xml-tools/parser": "^1.0.11"
+  },
   "devDependencies": {
     "@types/jest": "29.1.1",
     "@types/node": "^14.14.2",
     "codecov": "^3.8.0",
     "jest": "29.1.1",
-    "prettier": "^3.0.0",
+    "prettier": "^3.2.5",
     "ts-jest": "29.1.1",
     "ts-node": "^9.0.0",
     "typescript": "^5.0.0"
